--- a/BOJ_1271_SuperRich.ipynb
+++ b/BOJ_1271_SuperRich.ipynb
@@ -2,22 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4a81197f",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "210 11\n",
-      "19\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n, m = map(int, input().split())\n",
     "print(n // m)\n",
@@ -27,7 +17,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -41,7 +31,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
