--- a/BO_8437_Julka.ipynb
+++ b/BO_8437_Julka.ipynb
@@ -2,30 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "83b37ce5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "2\n",
-      "6\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input())\n",
     "m = int(input())\n",
     "\n",
-    "q = (n - m) // 2;\n",
-    "p = q + m;\n",
+    "q = (n - m) // 2\n",
+    "p = q + m\n",
     "\n",
-    "print(p);\n",
-    "print(q);"
+    "print(p)\n",
+    "print(q)"
    ]
   }
  ],
